bk_ida/gccida/g0/peep2_find_free_register
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3412:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+3Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3426:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[froma].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3429:33: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &live, peep2_insn_data_0[froma].live_before); 
                                ^~~~~~~~~~~~~~~~~
                                peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3434:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[froma].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3437:38: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &this_live, peep2_insn_data_0[froma].live_before); 
                                     ^~~~~~~~~~~~~~~~~
                                     peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3520:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3523:13: error: use of undeclared identifier 'search_ofs_1'
raw_regno = search_ofs_1 + i; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3524:6: error: use of undeclared identifier 'search_ofs_1'
if ( search_ofs_1 + i > 52 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3556:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3556:48: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
                                               ^~~~~~~~~~~~
                                               mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3606:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3606:49: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
                                                ^~~~~~~~~~~~
                                                mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/recog.c:3612:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = raw_regno; 
^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/peep2_find_free_register/src/obj/recog.o] Error 1
